k8s/app-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    app: app
    version: green
  name: app-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
      version: green
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        app: app
        version: green
    spec:
      containers:
        - env:
            - name: ASPNETCORE_URLS
              value: http://+:8080
          image: auradvin/dotpics:1.2
          name: dotpics-app
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /home/app/.aspnet/DataProtection-Keys
              name: data-protection
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
      restartPolicy: Always
      volumes:
        - name: data-protection
          persistentVolumeClaim:
            claimName: data-protection
